fixes centering jump

--- a/app/resources/css/modules/_main.scss
+++ b/app/resources/css/modules/_main.scss
@@ -1,3 +1,12 @@
+
+/* to prevent “centering jumps” when navigating back and forth between pages with enough content to have a vertical scroll bar and pages that do not. */
+@media (min-width: 1024px) {
+	html {
+	  overflow-y: scroll;
+	}
+}
+
+
 body {
 	font: 18px/1.3 arial, verdana, sans-serif;
 	margin: 0;
